--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ a {
 .hero-containerImg {
   width: 100%;
   height: 17.6rem;
-  background-image: url(/images/image-hero-mobile.png);
+  background-image: url(./images/image-hero-mobile.png);
   background-position: center;
   background-size: cover;  
 }
@@ -295,7 +295,7 @@ a {
     grid-area: 1/2/1/3;
     width: 26vw;
     height: 71.5vh;
-    background-image: url(/images/image-hero-desktop.png);
+    background-image: url(./images/image-hero-desktop.png);
   }
   
   .hero-body {
